src/App.css
.cream {
  background: #f1f4f1;
}
.green1 {
  background: #b8c3ae;
}
.green2 {
  background: #69896a;
}
.green3 {
  background: #3c5341;
}
.browngreen {
  background: #9a9777;
}

.swatch_1 {
  background: #afa49d;
}
.swatch_2 {
  /* background-color: #c9d6db; */
  background-color: #d2e0ee;
  /* sohpias blue */
}
.swatch_3 {
  background-color: #162f20;
}
.swatch_4 {
  background: #957e6a;
}
.swatch_5 {
  background: #555546;
}

.body {
  background-color: #ac1212;
}

/* Text */
.poppins-thin {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.poppins-extralight {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
}

.poppins-light {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.poppins-medium {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.poppins-semibold {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.poppins-bold {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.poppins-extrabold {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.poppins-black {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.poppins-thin-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.poppins-extralight-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: italic;
}

.poppins-light-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.poppins-regular-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.poppins-medium-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.poppins-semibold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: italic;
}

.poppins-bold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.poppins-extrabold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: italic;
}

.poppins-black-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: italic;
}
.containerCon {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  border-radius: 2px;
  border-style: solid;
  border: red;
}
.headerText {
  font-size: 40px;
}

@media (max-width: 275px) {
  .containerCon {
    max-width: 245px;
  }
  .gridclass {
    display: grid;
    grid-template-columns: repeat(1 minmax(0, 1fr));
  }
}

@media (min-width: 355px) {
  .containerCon1 {
    max-width: 325px;
    padding-top: 50px;
    padding-bottom: 50px;
  }
  .heroNameText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 35px;
  }
  .NavHeader {
    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 30px;
  }
  .NavUI {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-size: 25px;
    font-style: italic;
  }
  .heroQuoteText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-size: 20px;
  }
  .headerText {
    font-size: 30px;
    text-align: center;
    margin-bottom: 0.5rem;
  }
  .headerText1 {
    font-size: 30px;
    margin-bottom: 2rem;
  }
  .textExp {
    font-size: 14px;
  }
  .textDate {
    font-size: 12px;
    line-height: 1.25rem;
  }
  .textPaperInfo {
    font-size: 12px;
    line-height: 2rem;
  }
  .footerSize {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
  .button-1 {
    background-color: #131313;
    border-radius: 8px;
    border-style: none;
    box-sizing: border-box;
    color: #ffffff;
    cursor: pointer;
    display: inline-block;
    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial,
      sans-serif;
    font-size: 14px;
    font-weight: 500;
    height: 40px;
    line-height: 20px;
    list-style: none;
    margin: 0;
    outline: none;
    padding: 10px 46px;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: color 100ms;
    vertical-align: baseline;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
  }
  .bodyTextAbout {
    color: black;
    font-size: 18px;
    font-family: "Playfair Display";
    font-weight: "500";
    letter-spacing: 2px;
    padding-bottom: 1.5rem;
  }

  .flexAbout {
    display: flex;
    flex-direction: column;
  }
  .iconSize {
    height: 2rem;
  }

  .bodyText {
    font-size: 16px;
    word-spacing: 2px;
  }

  .imgAdler {
    justify-content: center;
  }
  .imgAdlerHeight {
    height: 6rem;
  }
  .expSpacing {
    margin-top: 2rem;
  }
}

@media (min-width: 640px) {
  .containerCon1 {
    max-width: 650px;
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
}

@media (min-width: 768px) {
  .containerCon1 {
    max-width: 650px;
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
  .heroNameText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 35px;
  }
  .heroQuoteText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-size: 20px;
  }

  .NavUI {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-size: 15px;
    font-style: italic;
  }
  .NavHeader {
    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 30px;
  }
  .gridclass {
    display: grid;
    grid-template-columns: repeat(1 minmax(0, 1fr));
  }
  .gridclassPaper {
    display: grid;
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
}

@media (min-width: 1024px) {
  .containerCon1 {
    max-width: 900px;
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
  .NavUI {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-size: 25px;
    font-style: italic;
  }
  */
  /* Make 2 grid classes */
  .gridclassPaper {
    display: grid;
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
  .gridclass {
    display: grid;
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
  .headerText {
    font-size: 24px;
    text-align: center;
    margin-bottom: 1rem;
    margin-top: 2rem;
  }
  .headerText1 {
    font-size: 50px;
  }

  .textDate {
    font-size: 16px;
    line-height: 1.25rem;
  }

  .expGap {
    gap: 1rem;
  }
  .textExp {
    font-size: 14px;
  }
  .textDate {
    font-size: 12px;
  }

  .textPaperInfo {
    font-size: 18px;
    line-height: 3rem;
  }
  .button-1 {
    font-size: 20px;
    font-weight: 500;
    height: 50px;
  }
  .iconSize {
    height: 3rem;
    padding-bottom: 0.5rem;
  }
  .footerSize {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
  .bodyTextAbout {
    color: black;
    font-size: 32px;
    font-family: "Playfair Display";
    font-weight: "500";
    letter-spacing: 2px;
    padding-bottom: 2.5rem;
  }
  .flexAbout {
    display: flex;
    flex-direction: row;
  }
  .aboutImg {
    width: 50%;
    justify-content: flex-end;
    display: flex;
    padding-top: 2.5rem;
    padding-right: 2.5rem;
  }
  .aboutText {
    width: 50%;
    padding-left: 1rem;
    padding-right: 1rem;
    text-align: left;
  }
  .bodyText {
    font-size: 20px;
    word-spacing: 2px;
  }
  .imgAdler {
    justify-content: flex-end;
    padding-right: 4rem;
  }
  .imgAdlerHeight {
    height: 8rem;
  }
  .expSpacing {
    margin-top: 0rem;
  }
}

@media (min-width: 1280px) {
  .containerCon1 {
    max-width: 1100px;

    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
  .heroNameText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 50px;
  }
  .heroQuoteText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-size: 20px;
  }
  .headerText {
    font-size: 25px;
    text-align: left;
    margin-bottom: 1rem;
  }
  .textExp {
    font-size: 14px;
  }
  .textDate {
    font-size: 12px;
    line-height: 1.25rem;
  }
  .expGap {
    gap: 6rem;
  }
  .gridclass {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  .gridclassPaper {
    display: grid;
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
}

@media (min-width: 1536px) {
  .containerCon1 {
    border: rgb(35, 173, 0);
    border-style: solid;
    border-radius: 2px;
    max-width: 1400px;

    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
  .heroNameText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 70px;
  }
  .heroQuoteText {
    text-shadow: 1px 1px 3px rgb(0, 0, 0);

    line-height: 1;

    font-size: 40px;
  }
  .gridclass {
    display: grid;
    grid-template-columns: repeat(1 minmax(0, 1fr));
  }
  .gridclassPaper {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .headerText {
    font-size: 40px;
  }
  .expGap {
    gap: 8rem;
  }
}

@media (min-width: 1750px) {
  .containerCon1 {
    border: blue;
    border-style: solid;
    border-radius: 2px;
    max-width: 1600px;
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
}

@media (min-width: 1900px) {
  .containerCon {
    max-width: 1550px;
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 100px;
    padding-bottom: 100px;
    border-radius: 30px;
  }
  .containerCon1 {
    border: red;
    border-style: solid;
    border-radius: 2px;
    border-width: 2px;
    max-width: 1750px;
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 30px;
  }
  .expGap {
    gap: 12rem;
  }
  .textExp {
    font-size: 16px;
  }
  .textDate {
    font-size: 14px;
    line-height: 1.25rem;
  }
  .gridclass {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  .gridclassPaper {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

.textColor {
  color: #3c5341;
}

/* CSS */

.button-1:hover,
.button-1:focus {
  background-color: #69896a;
}

